odh-kfp-modelmesh/manifests/minio/minio-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: minio
spec:
  to:
    kind: Service
    name: minio-service
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
